refactor: simplify type conversion methods and improve firstRowOrEmpty logic